Switching to JUL (instead of log4j).

--- a/highfive/pom.xml
+++ b/highfive/pom.xml
@@ -55,18 +55,6 @@
   </properties>
 
   <dependencies>
-
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-api</artifactId>
-      <version>${log4j.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-core</artifactId>
-      <version>${log4j.version}</version>
-    </dependency>
-
   </dependencies>
 
   <scm>
@@ -90,35 +78,6 @@
 
     <plugins>
 
-      <!-- Assemble jar with dependencies -->
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <version>3.6.0</version><!--$NO-MVN-MAN-VER$-->
-        <configuration>
-          <archive>
-            <manifest>
-              <mainClass>highfive.HighFive</mainClass>
-            </manifest>
-          </archive>
-          <descriptorRefs>
-            <descriptorRef>jar-with-dependencies</descriptorRef>
-          </descriptorRefs>
-          <finalName>highfive-${project.version}</finalName>
-          <appendAssemblyId>false</appendAssemblyId>
-        </configuration>
-        <executions>
-          <execution>
-            <id>make-assembly</id>
-            <phase>package</phase>
-            <goals>
-              <goal>single</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>    
-
       <!-- Embeds the project build information -->
 
       <plugin>
@@ -133,6 +92,22 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+
+      <!-- Specifies the main class -->
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.2.2</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <mainClass>highfive.HighFive</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
       </plugin>
 
     </plugins>
@@ -163,8 +138,6 @@
       <build>
 
         <plugins>
-        
-        
 
           <!-- Set the release tag to the version number only, and single versioning -->
 
